# hailo_playground

./: .gitignore  CMakeLists.txt  README.md
src/: CocoClass.hpp  EmailNotifier.cpp  EmailNotifier.hpp  Hailo8Device.cpp  Hailo8Device.hpp  ImageNetLabels.hpp  Utils.hpp  classify.cpp  detect.cpp
